--- a/react-github-user-card/src/index.css
+++ b/react-github-user-card/src/index.css
@@ -11,3 +11,25 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.card-wrapper {
+  /* the box around ALL the cards */
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+  margin: 50px;
+}
+
+.card-follower {
+  /* space around each card */
+  padding:10px;
+  margin: 5px;
+  border-top: solid pink;
+}
+
+.card-image{
+  /* One image was too wide so I'm making all the images the same size */
+  width: 200px;
+  height: 200px;
+  padding: 5px;
+}
